...
              {data.community.name}
            </Text>
          </>
        ) : null}
        <View style={[a.gap_md]}>
          <Button
            testID="groupInviteLandingSignIn"
            label={l`Sign in`}
            color="primary"
            size="large"
            onPress={() => {
              ax.metric('groupInvite:signInRequested', {})
              setScreenState(LoggedOutScreenState.S_Login)
...
