...
                    })
                  }
                }}
              />
            ) : (
              <Button
                testID="groupInviteAcceptButton"
                label={l`Accept group invite`}
                color="primary"
                size="large"
                onPress={() => void onAccept()}
                style={[a.w_full]}>
                <ButtonText>
...
